--- a/test/src/main/java/uks/debuggen/studyright/StudyRight/classModel.yaml
+++ b/test/src/main/java/uks/debuggen/studyright/StudyRight/classModel.yaml
@@ -21,7 +21,7 @@
   attributes: 	studyRightBusinessLogic_model 	studyRightBusinessLogic_handlerMap
   importList: 	"import java.util.LinkedHashMap;" 	"import java.util.function.Consumer;" 	"import uks.debuggen.studyright.events.*;"
   imports: 	"import java.util.LinkedHashMap;" 	"import java.util.function.Consumer;" 	"import uks.debuggen.studyright.events.*;"
-  methods: 	studyRightBusinessLogic_handleLoadRoomsCommand 	studyRightBusinessLogic_handleDemoLoadRoomsCommand 	studyRightBusinessLogic_handleFindToursCommand 	studyRightBusinessLogic_handleDemoFindToursCommand 	studyRightBusinessLogic_handleVisitRoomCommand 	studyRightBusinessLogic_handleDemoVisitRoomCommand 	studyRightBusinessLogic_handleCollectTourStopsCommand 	studyRightBusinessLogic_handleDemoCollectTourStopsCommand 	studyRightBusinessLogic_initEventHandlerMap
+  methods: 	studyRightBusinessLogic_handleLoadRoomsCommand 	studyRightBusinessLogic_handleDemoLoadRoomsCommand 	studyRightBusinessLogic_handleFindToursCommand 	studyRightBusinessLogic_handleDemoFindToursCommand 	studyRightBusinessLogic_handleVisitRoomCommand 	studyRightBusinessLogic_handleDemoVisitRoomCommand 	studyRightBusinessLogic_handleCollectTourStopsCommand 	studyRightBusinessLogic_handleDemoCollectTourStopsCommand 	studyRightBusinessLogic_initEventHandlerMap 	studyRightBusinessLogic_ignoreEvent 	studyRightBusinessLogic_getHandler
   model: 	c
   modified: 	false
   name: 	StudyRightBusinessLogic
@@ -43,7 +43,7 @@
   attributes: 	studyRightService_history 	studyRightService_port 	studyRightService_spark 	studyRightService_model
   importList: 	"import java.util.LinkedHashMap;" 	"import java.util.Map;" 	"import java.util.function.Consumer;" 	"import uks.debuggen.studyright.events.*;" 	"import org.fulib.yaml.Yaml;" 	"import spark.Service;" 	"import spark.Request;" 	"import spark.Response;" 	"import com.mashape.unirest.http.HttpResponse;" 	"import com.mashape.unirest.http.Unirest;" 	"import com.mashape.unirest.http.exceptions.UnirestException;" 	"import java.util.concurrent.ExecutorService;" 	"import java.util.concurrent.Executors;" 	"import java.util.logging.Logger;" 	"import java.util.logging.Level;"
   imports: 	"import java.util.LinkedHashMap;" 	"import java.util.Map;" 	"import java.util.function.Consumer;" 	"import uks.debuggen.studyright.events.*;" 	"import org.fulib.yaml.Yaml;" 	"import spark.Service;" 	"import spark.Request;" 	"import spark.Response;" 	"import com.mashape.unirest.http.HttpResponse;" 	"import com.mashape.unirest.http.Unirest;" 	"import com.mashape.unirest.http.exceptions.UnirestException;" 	"import java.util.concurrent.ExecutorService;" 	"import java.util.concurrent.Executors;" 	"import java.util.logging.Logger;" 	"import java.util.logging.Level;"
-  methods: 	studyRightService_start 	studyRightService_getHello 	studyRightService_subscribeAndLoadOldEvents 	studyRightService_apply 	studyRightService_getPage 	studyRightService_getDemoPage 	studyRightService_ignoreEvent 	studyRightService_publish 	studyRightService_postApply
+  methods: 	studyRightService_start 	studyRightService_getHello 	studyRightService_subscribeAndLoadOldEvents 	studyRightService_apply 	studyRightService_getPage 	studyRightService_getDemoPage 	studyRightService_publish 	studyRightService_postApply
   model: 	c
   modified: 	false
   name: 	StudyRightService
@@ -618,6 +618,34 @@ if (event.getId().equals(\"12:12\")) {
   returnType: 	void
   signature: 	"class/StudyRightBusinessLogic/method/initEventHandlerMap()"
 
+- studyRightBusinessLogic_ignoreEvent: 	org.fulib.classmodel.FMethod
+  annotations: 	""
+  clazz: 	studyRightBusinessLogic
+  declaration: 	"private void ignoreEvent(Event event)"
+  id: 	StudyRightBusinessLogic_ignoreEvent
+  methodBody: 	"// empty
+"
+  modified: 	false
+  modifiers: 	private
+  name: 	ignoreEvent
+  paramsString: 	"Event event"
+  returnType: 	void
+  signature: 	"class/StudyRightBusinessLogic/method/ignoreEvent(Event)"
+
+- studyRightBusinessLogic_getHandler: 	org.fulib.classmodel.FMethod
+  annotations: 	""
+  clazz: 	studyRightBusinessLogic
+  declaration: 	"public Consumer<Event> getHandler(Event event)"
+  id: 	StudyRightBusinessLogic_getHandler
+  methodBody: 	"return getHandlerMap().computeIfAbsent(event.getClass(), k -> this::ignoreEvent);
+"
+  modified: 	false
+  modifiers: 	public
+  name: 	getHandler
+  paramsString: 	"Event event"
+  returnType: 	"Consumer<Event>"
+  signature: 	"class/StudyRightBusinessLogic/method/getHandler(Event)"
+
 - studyRightBusinessLogic_builder: 	org.fulib.classmodel.AssocRole
   aggregation: 	false
   cardinality: 	1
@@ -914,7 +942,7 @@ catch (UnirestException e) {
    return;
 }
 businessLogic.initEventHandlerMap();
-Consumer<Event> handler = businessLogic.getHandlerMap().computeIfAbsent(event.getClass(), k -> this::ignoreEvent);
+Consumer<Event> handler = businessLogic.getHandler(event);
 handler.accept(event);
 history.put(event.getId(), event);
 publish(event);"
@@ -992,20 +1020,6 @@ return html.toString();"
   paramsString: 	"Request request, Response response"
   returnType: 	String
   signature: 	"class/StudyRightService/method/getDemoPage(Request,Response)"
-
-- studyRightService_ignoreEvent: 	org.fulib.classmodel.FMethod
-  annotations: 	""
-  clazz: 	studyRightService
-  declaration: 	"private void ignoreEvent(Event event)"
-  id: 	StudyRightService_ignoreEvent
-  methodBody: 	"// empty
-"
-  modified: 	false
-  modifiers: 	private
-  name: 	ignoreEvent
-  paramsString: 	"Event event"
-  returnType: 	void
-  signature: 	"class/StudyRightService/method/ignoreEvent(Event)"
 
 - studyRightService_publish: 	org.fulib.classmodel.FMethod
   annotations: 	""
