--- a/test/src/main/java/uks/debuggen/shop/events/classModel.yaml
+++ b/test/src/main/java/uks/debuggen/shop/events/classModel.yaml
@@ -1,5 +1,5 @@
 - c: 	org.fulib.classmodel.ClassModel
-  classes: 	event 	dataEvent 	serviceSubscribed 	command 	productStoredEvent 	boxBuilt 	shopShoesSelectedCommand 	orderRegisteredCommand 	orderBuilt 	customerBuilt 	pickTaskBuilt 	orderApprovedEvent 	orderPickedEvent 	orderRegisteredEvent 	orderDeclinedEvent
+  classes: 	event 	dataEvent 	serviceSubscribed 	command 	storeBoxCommand 	boxBuilt 	productStoredEvent 	selectProductCommand 	submitOrderCommand 	orderBuilt 	customerBuilt 	orderRegisteredEvent 	pickTaskBuilt 	orderApprovedEvent 	pickOrderCommand 	orderPickedEvent 	orderDeclinedEvent
   defaultCollectionType: 	c1
   defaultPropertyStyle: 	Bean
   defaultRoleType: 	"java.util.ArrayList<%s>"
@@ -13,7 +13,7 @@
   modified: 	false
   name: 	Event
   propertyStyle: 	Bean
-  subClasses: 	dataEvent 	serviceSubscribed 	command 	productStoredEvent 	orderApprovedEvent 	orderPickedEvent 	orderRegisteredEvent 	orderDeclinedEvent
+  subClasses: 	dataEvent 	serviceSubscribed 	command 	productStoredEvent 	orderRegisteredEvent 	orderApprovedEvent 	orderPickedEvent 	orderDeclinedEvent
 
 - dataEvent: 	org.fulib.classmodel.Clazz
   attributes: 	dataEvent_blockId
@@ -37,16 +37,16 @@
   modified: 	false
   name: 	Command
   propertyStyle: 	Bean
-  subClasses: 	shopShoesSelectedCommand 	orderRegisteredCommand
+  subClasses: 	storeBoxCommand 	selectProductCommand 	submitOrderCommand 	pickOrderCommand
   superClass: 	event
 
-- productStoredEvent: 	org.fulib.classmodel.Clazz
-  attributes: 	productStoredEvent_box 	productStoredEvent_product 	productStoredEvent_place
+- storeBoxCommand: 	org.fulib.classmodel.Clazz
+  attributes: 	storeBoxCommand_box 	storeBoxCommand_product 	storeBoxCommand_place
   model: 	c
   modified: 	false
-  name: 	ProductStoredEvent
+  name: 	StoreBoxCommand
   propertyStyle: 	Bean
-  superClass: 	event
+  superClass: 	command
 
 - boxBuilt: 	org.fulib.classmodel.Clazz
   attributes: 	boxBuilt_product 	boxBuilt_place
@@ -56,18 +56,26 @@
   propertyStyle: 	Bean
   superClass: 	dataEvent
 
-- shopShoesSelectedCommand: 	org.fulib.classmodel.Clazz
+- productStoredEvent: 	org.fulib.classmodel.Clazz
+  attributes: 	productStoredEvent_box 	productStoredEvent_product 	productStoredEvent_place
   model: 	c
   modified: 	false
-  name: 	ShopShoesSelectedCommand
+  name: 	ProductStoredEvent
+  propertyStyle: 	Bean
+  superClass: 	event
+
+- selectProductCommand: 	org.fulib.classmodel.Clazz
+  model: 	c
+  modified: 	false
+  name: 	SelectProductCommand
   propertyStyle: 	Bean
   superClass: 	command
 
-- orderRegisteredCommand: 	org.fulib.classmodel.Clazz
-  attributes: 	orderRegisteredCommand_product 	orderRegisteredCommand_name 	orderRegisteredCommand_address
+- submitOrderCommand: 	org.fulib.classmodel.Clazz
+  attributes: 	submitOrderCommand_product 	submitOrderCommand_name 	submitOrderCommand_address 	submitOrderCommand_trigger 	submitOrderCommand_customer
   model: 	c
   modified: 	false
-  name: 	OrderRegisteredCommand
+  name: 	SubmitOrderCommand
   propertyStyle: 	Bean
   superClass: 	command
 
@@ -87,6 +95,14 @@
   propertyStyle: 	Bean
   superClass: 	dataEvent
 
+- orderRegisteredEvent: 	org.fulib.classmodel.Clazz
+  attributes: 	orderRegisteredEvent_order 	orderRegisteredEvent_product 	orderRegisteredEvent_customer 	orderRegisteredEvent_address 	orderRegisteredEvent_trigger
+  model: 	c
+  modified: 	false
+  name: 	OrderRegisteredEvent
+  propertyStyle: 	Bean
+  superClass: 	event
+
 - pickTaskBuilt: 	org.fulib.classmodel.Clazz
   attributes: 	pickTaskBuilt_order 	pickTaskBuilt_product 	pickTaskBuilt_customer 	pickTaskBuilt_address 	pickTaskBuilt_state 	pickTaskBuilt_box
   model: 	c
@@ -103,19 +119,19 @@
   propertyStyle: 	Bean
   superClass: 	event
 
+- pickOrderCommand: 	org.fulib.classmodel.Clazz
+  attributes: 	pickOrderCommand_pickTask 	pickOrderCommand_box 	pickOrderCommand_user
+  model: 	c
+  modified: 	false
+  name: 	PickOrderCommand
+  propertyStyle: 	Bean
+  superClass: 	command
+
 - orderPickedEvent: 	org.fulib.classmodel.Clazz
   attributes: 	orderPickedEvent_pickTask 	orderPickedEvent_box 	orderPickedEvent_user
   model: 	c
   modified: 	false
   name: 	OrderPickedEvent
-  propertyStyle: 	Bean
-  superClass: 	event
-
-- orderRegisteredEvent: 	org.fulib.classmodel.Clazz
-  attributes: 	orderRegisteredEvent_trigger 	orderRegisteredEvent_product 	orderRegisteredEvent_customer 	orderRegisteredEvent_address
-  model: 	c
-  modified: 	false
-  name: 	OrderRegisteredEvent
   propertyStyle: 	Bean
   superClass: 	event
 
@@ -161,6 +177,51 @@
   type: 	String
   typeSignature: 	String
 
+- storeBoxCommand_box: 	org.fulib.classmodel.Attribute
+  clazz: 	storeBoxCommand
+  id: 	StoreBoxCommand_box
+  modified: 	false
+  name: 	box
+  propertyStyle: 	Bean
+  type: 	String
+  typeSignature: 	String
+
+- storeBoxCommand_product: 	org.fulib.classmodel.Attribute
+  clazz: 	storeBoxCommand
+  id: 	StoreBoxCommand_product
+  modified: 	false
+  name: 	product
+  propertyStyle: 	Bean
+  type: 	String
+  typeSignature: 	String
+
+- storeBoxCommand_place: 	org.fulib.classmodel.Attribute
+  clazz: 	storeBoxCommand
+  id: 	StoreBoxCommand_place
+  modified: 	false
+  name: 	place
+  propertyStyle: 	Bean
+  type: 	String
+  typeSignature: 	String
+
+- boxBuilt_product: 	org.fulib.classmodel.Attribute
+  clazz: 	boxBuilt
+  id: 	BoxBuilt_product
+  modified: 	false
+  name: 	product
+  propertyStyle: 	Bean
+  type: 	String
+  typeSignature: 	String
+
+- boxBuilt_place: 	org.fulib.classmodel.Attribute
+  clazz: 	boxBuilt
+  id: 	BoxBuilt_place
+  modified: 	false
+  name: 	place
+  propertyStyle: 	Bean
+  type: 	String
+  typeSignature: 	String
+
 - productStoredEvent_box: 	org.fulib.classmodel.Attribute
   clazz: 	productStoredEvent
   id: 	ProductStoredEvent_box
@@ -188,47 +249,47 @@
   type: 	String
   typeSignature: 	String
 
-- boxBuilt_product: 	org.fulib.classmodel.Attribute
-  clazz: 	boxBuilt
-  id: 	BoxBuilt_product
+- submitOrderCommand_product: 	org.fulib.classmodel.Attribute
+  clazz: 	submitOrderCommand
+  id: 	SubmitOrderCommand_product
   modified: 	false
   name: 	product
   propertyStyle: 	Bean
   type: 	String
   typeSignature: 	String
 
-- boxBuilt_place: 	org.fulib.classmodel.Attribute
-  clazz: 	boxBuilt
-  id: 	BoxBuilt_place
-  modified: 	false
-  name: 	place
-  propertyStyle: 	Bean
-  type: 	String
-  typeSignature: 	String
-
-- orderRegisteredCommand_product: 	org.fulib.classmodel.Attribute
-  clazz: 	orderRegisteredCommand
-  id: 	OrderRegisteredCommand_product
-  modified: 	false
-  name: 	product
-  propertyStyle: 	Bean
-  type: 	String
-  typeSignature: 	String
-
-- orderRegisteredCommand_name: 	org.fulib.classmodel.Attribute
-  clazz: 	orderRegisteredCommand
-  id: 	OrderRegisteredCommand_name
+- submitOrderCommand_name: 	org.fulib.classmodel.Attribute
+  clazz: 	submitOrderCommand
+  id: 	SubmitOrderCommand_name
   modified: 	false
   name: 	name
   propertyStyle: 	Bean
   type: 	String
   typeSignature: 	String
 
-- orderRegisteredCommand_address: 	org.fulib.classmodel.Attribute
-  clazz: 	orderRegisteredCommand
-  id: 	OrderRegisteredCommand_address
+- submitOrderCommand_address: 	org.fulib.classmodel.Attribute
+  clazz: 	submitOrderCommand
+  id: 	SubmitOrderCommand_address
   modified: 	false
   name: 	address
+  propertyStyle: 	Bean
+  type: 	String
+  typeSignature: 	String
+
+- submitOrderCommand_trigger: 	org.fulib.classmodel.Attribute
+  clazz: 	submitOrderCommand
+  id: 	SubmitOrderCommand_trigger
+  modified: 	false
+  name: 	trigger
+  propertyStyle: 	Bean
+  type: 	String
+  typeSignature: 	String
+
+- submitOrderCommand_customer: 	org.fulib.classmodel.Attribute
+  clazz: 	submitOrderCommand
+  id: 	SubmitOrderCommand_customer
+  modified: 	false
+  name: 	customer
   propertyStyle: 	Bean
   type: 	String
   typeSignature: 	String
@@ -274,6 +335,51 @@
   id: 	CustomerBuilt_orders
   modified: 	false
   name: 	orders
+  propertyStyle: 	Bean
+  type: 	String
+  typeSignature: 	String
+
+- orderRegisteredEvent_order: 	org.fulib.classmodel.Attribute
+  clazz: 	orderRegisteredEvent
+  id: 	OrderRegisteredEvent_order
+  modified: 	false
+  name: 	order
+  propertyStyle: 	Bean
+  type: 	String
+  typeSignature: 	String
+
+- orderRegisteredEvent_product: 	org.fulib.classmodel.Attribute
+  clazz: 	orderRegisteredEvent
+  id: 	OrderRegisteredEvent_product
+  modified: 	false
+  name: 	product
+  propertyStyle: 	Bean
+  type: 	String
+  typeSignature: 	String
+
+- orderRegisteredEvent_customer: 	org.fulib.classmodel.Attribute
+  clazz: 	orderRegisteredEvent
+  id: 	OrderRegisteredEvent_customer
+  modified: 	false
+  name: 	customer
+  propertyStyle: 	Bean
+  type: 	String
+  typeSignature: 	String
+
+- orderRegisteredEvent_address: 	org.fulib.classmodel.Attribute
+  clazz: 	orderRegisteredEvent
+  id: 	OrderRegisteredEvent_address
+  modified: 	false
+  name: 	address
+  propertyStyle: 	Bean
+  type: 	String
+  typeSignature: 	String
+
+- orderRegisteredEvent_trigger: 	org.fulib.classmodel.Attribute
+  clazz: 	orderRegisteredEvent
+  id: 	OrderRegisteredEvent_trigger
+  modified: 	false
+  name: 	trigger
   propertyStyle: 	Bean
   type: 	String
   typeSignature: 	String
@@ -341,6 +447,33 @@
   type: 	String
   typeSignature: 	String
 
+- pickOrderCommand_pickTask: 	org.fulib.classmodel.Attribute
+  clazz: 	pickOrderCommand
+  id: 	PickOrderCommand_pickTask
+  modified: 	false
+  name: 	pickTask
+  propertyStyle: 	Bean
+  type: 	String
+  typeSignature: 	String
+
+- pickOrderCommand_box: 	org.fulib.classmodel.Attribute
+  clazz: 	pickOrderCommand
+  id: 	PickOrderCommand_box
+  modified: 	false
+  name: 	box
+  propertyStyle: 	Bean
+  type: 	String
+  typeSignature: 	String
+
+- pickOrderCommand_user: 	org.fulib.classmodel.Attribute
+  clazz: 	pickOrderCommand
+  id: 	PickOrderCommand_user
+  modified: 	false
+  name: 	user
+  propertyStyle: 	Bean
+  type: 	String
+  typeSignature: 	String
+
 - orderPickedEvent_pickTask: 	org.fulib.classmodel.Attribute
   clazz: 	orderPickedEvent
   id: 	OrderPickedEvent_pickTask
@@ -364,42 +497,6 @@
   id: 	OrderPickedEvent_user
   modified: 	false
   name: 	user
-  propertyStyle: 	Bean
-  type: 	String
-  typeSignature: 	String
-
-- orderRegisteredEvent_trigger: 	org.fulib.classmodel.Attribute
-  clazz: 	orderRegisteredEvent
-  id: 	OrderRegisteredEvent_trigger
-  modified: 	false
-  name: 	trigger
-  propertyStyle: 	Bean
-  type: 	String
-  typeSignature: 	String
-
-- orderRegisteredEvent_product: 	org.fulib.classmodel.Attribute
-  clazz: 	orderRegisteredEvent
-  id: 	OrderRegisteredEvent_product
-  modified: 	false
-  name: 	product
-  propertyStyle: 	Bean
-  type: 	String
-  typeSignature: 	String
-
-- orderRegisteredEvent_customer: 	org.fulib.classmodel.Attribute
-  clazz: 	orderRegisteredEvent
-  id: 	OrderRegisteredEvent_customer
-  modified: 	false
-  name: 	customer
-  propertyStyle: 	Bean
-  type: 	String
-  typeSignature: 	String
-
-- orderRegisteredEvent_address: 	org.fulib.classmodel.Attribute
-  clazz: 	orderRegisteredEvent
-  id: 	OrderRegisteredEvent_address
-  modified: 	false
-  name: 	address
   propertyStyle: 	Bean
   type: 	String
   typeSignature: 	String
