--- a/test/src/test/java/uks/fulibgen/shop/classModel.yaml
+++ b/test/src/test/java/uks/fulibgen/shop/classModel.yaml
@@ -9,8 +9,8 @@
 
 - testSomeEventStorming: 	org.fulib.classmodel.Clazz
   attributes: 	testSomeEventStorming_eventBroker
-  importList: 	"import org.junit.Test;" 	"import uks.fulibgen.shop.events.*;" 	"import uks.fulibgen.shop.Shop.ShopService;" 	"import uks.fulibgen.shop.someservice.someserviceService;" 	"import uks.fulibgen.shop.Storage.StorageService;" 	"import org.fulib.yaml.Yaml;" 	"import com.mashape.unirest.http.HttpResponse;" 	"import com.mashape.unirest.http.Unirest;" 	"import com.mashape.unirest.http.exceptions.UnirestException;" 	"import static com.codeborne.selenide.Selenide.open;" 	"import static com.codeborne.selenide.Selenide.$;" 	"import static com.codeborne.selenide.Condition.text;" 	"import com.codeborne.selenide.SelenideElement;"
-  imports: 	"import org.junit.Test;" 	"import uks.fulibgen.shop.events.*;" 	"import uks.fulibgen.shop.Shop.ShopService;" 	"import uks.fulibgen.shop.someservice.someserviceService;" 	"import uks.fulibgen.shop.Storage.StorageService;" 	"import org.fulib.yaml.Yaml;" 	"import com.mashape.unirest.http.HttpResponse;" 	"import com.mashape.unirest.http.Unirest;" 	"import com.mashape.unirest.http.exceptions.UnirestException;" 	"import static com.codeborne.selenide.Selenide.open;" 	"import static com.codeborne.selenide.Selenide.$;" 	"import static com.codeborne.selenide.Condition.text;" 	"import com.codeborne.selenide.SelenideElement;"
+  importList: 	"import org.junit.Test;" 	"import uks.fulibgen.shop.events.*;" 	"import uks.fulibgen.shop.Shop.ShopService;" 	"import uks.fulibgen.shop.Storage.StorageService;" 	"import org.fulib.yaml.Yaml;" 	"import com.mashape.unirest.http.HttpResponse;" 	"import com.mashape.unirest.http.Unirest;" 	"import com.mashape.unirest.http.exceptions.UnirestException;" 	"import static com.codeborne.selenide.Selenide.open;" 	"import static com.codeborne.selenide.Selenide.$;" 	"import static com.codeborne.selenide.Condition.text;" 	"import com.codeborne.selenide.SelenideElement;"
+  imports: 	"import org.junit.Test;" 	"import uks.fulibgen.shop.events.*;" 	"import uks.fulibgen.shop.Shop.ShopService;" 	"import uks.fulibgen.shop.Storage.StorageService;" 	"import org.fulib.yaml.Yaml;" 	"import com.mashape.unirest.http.HttpResponse;" 	"import com.mashape.unirest.http.Unirest;" 	"import com.mashape.unirest.http.exceptions.UnirestException;" 	"import static com.codeborne.selenide.Selenide.open;" 	"import static com.codeborne.selenide.Selenide.$;" 	"import static com.codeborne.selenide.Condition.text;" 	"import com.codeborne.selenide.SelenideElement;"
   methods: 	testSomeEventStorming_SomeEventStorming 	testSomeEventStorming_publish
   model: 	c
   modified: 	false
@@ -48,10 +48,6 @@ ShopService shop = new ShopService();
 shop.start();
 
 // start service
-someserviceService someservice = new someserviceService();
-someservice.start();
-
-// start service
 StorageService storage = new StorageService();
 storage.start();
 
@@ -61,11 +57,10 @@ $(\"body\").shouldHave(text(\"event broker\"));
 SelenideElement pre = $(\"pre\");
 pre.shouldHave(text(\"http://localhost:42100/apply\"));
 pre.shouldHave(text(\"http://localhost:42002/apply\"));
-pre.shouldHave(text(\"http://localhost:42003/apply\"));
 
 // workflow working smoothly
-// create ProductStoredEvent: product stored 12:00
-ProductStoredEvent e1200 = new ProductStoredEvent();
+// create StoreBoxCommand: store box 12:00
+StoreBoxCommand e1200 = new StoreBoxCommand();
 e1200.setId(\"12:00\");
 e1200.setBox(\"box23\");
 e1200.setProduct(\"shoes\");
@@ -76,21 +71,11 @@ open(\"http://localhost:42000\");
 pre = $(\"#history\");
 pre.shouldHave(text(\"- 12_00:\"));
 
-// check someservice
+// check Storage
 open(\"http://localhost:42002\");
 pre = $(\"#history\");
 pre.shouldHave(text(\"- 12_00:\"));
 // check data note 12:01
-pre = $(\"#data\");
-pre.shouldHave(text(\"- box23:\"));
-pre.shouldHave(text(\"product: shoes\"));
-pre.shouldHave(text(\"place: shelf23\"));
-
-// check Storage
-open(\"http://localhost:42003\");
-pre = $(\"#history\");
-pre.shouldHave(text(\"- 12_00:\"));
-// check data note 12:02
 pre = $(\"#data\");
 pre.shouldHave(text(\"- box23:\"));
 pre.shouldHave(text(\"product: shoes\"));
@@ -125,10 +110,10 @@ pre.shouldHave(text(\"- order1300:\"));
 pre.shouldHave(text(\"state: picking\"));
 
 // check Storage
-open(\"http://localhost:42003\");
+open(\"http://localhost:42002\");
 pre = $(\"#history\");
 pre.shouldHave(text(\"- 13_01:\"));
-// check data note 13:04
+// check data note 13:05
 pre = $(\"#data\");
 pre.shouldHave(text(\"- pick1300:\"));
 pre.shouldHave(text(\"order: order1300\"));
@@ -137,8 +122,8 @@ pre.shouldHave(text(\"customer: Alice\"));
 pre.shouldHave(text(\"address: \\"Wonderland 1\\"\"));
 pre.shouldHave(text(\"state: todo\"));
 
-// create OrderPickedEvent: order picked 14:00
-OrderPickedEvent e1400 = new OrderPickedEvent();
+// create PickOrderCommand: pick order 14:00
+PickOrderCommand e1400 = new PickOrderCommand();
 e1400.setId(\"14:00\");
 e1400.setPickTask(\"pick1300\");
 e1400.setBox(\"box23\");
@@ -150,7 +135,7 @@ pre = $(\"#history\");
 pre.shouldHave(text(\"- 14_00:\"));
 
 // check Storage
-open(\"http://localhost:42003\");
+open(\"http://localhost:42002\");
 pre = $(\"#history\");
 pre.shouldHave(text(\"- 14_00:\"));
 // check data note 14:01
@@ -167,14 +152,14 @@ pre.shouldHave(text(\"place: shipping\"));
 open(\"http://localhost:42100\");
 pre = $(\"#history\");
 pre.shouldHave(text(\"- 14_00:\"));
-// check data note 14:03
+// check data note 14:04
 pre = $(\"#data\");
 pre.shouldHave(text(\"- order1300:\"));
 pre.shouldHave(text(\"state: shipping\"));
 
 // workflow OrderOutOfStocks
-// create OrderRegisteredEvent: order registered 13:11
-OrderRegisteredEvent e1311 = new OrderRegisteredEvent();
+// create SubmitOrderCommand: submit order 13:11
+SubmitOrderCommand e1311 = new SubmitOrderCommand();
 e1311.setId(\"13:11\");
 e1311.setTrigger(\"button OK\");
 e1311.setProduct(\"tshirt\");
@@ -190,13 +175,13 @@ pre.shouldHave(text(\"- 13_11:\"));
 open(\"http://localhost:42100\");
 pre = $(\"#history\");
 pre.shouldHave(text(\"- 13_11:\"));
-// check data note 13:12
+// check data note 13:16
 pre = $(\"#data\");
 pre.shouldHave(text(\"- order1310:\"));
 pre.shouldHave(text(\"state: \\"out of stock\\"\"));
 
 // check Storage
-open(\"http://localhost:42003\");
+open(\"http://localhost:42002\");
 pre = $(\"#history\");
 pre.shouldHave(text(\"- 13_11:\"));
 
