--- a/test/src/gen/resources/workflows/PartyWorkflow.es.yaml
+++ b/test/src/gen/resources/workflows/PartyWorkflow.es.yaml
@@ -1,12 +1,19 @@
 
+- board: PartyApp
+
+- action: Alice
+
 - page:
-    - name: Party App 12:00
+    - name: PartyApp 12:00
     - label: Welcome to the parties
     - label: What's your name?
     - input: name
       fill: Alice
     - button: ok
       command: login 12:01
+
+- policy: PartyApp
+  trigger: 12:01
 
 - event: login succeeded 12:10
   name: Alice
